Fix bullet point not showing up issue (fixes #69); focus on the text box upon new note creation (fixes #64); fix new note creation in the rool level (fixes #65)

--- a/pervane/static/css/styles.css
+++ b/pervane/static/css/styles.css
@@ -10,15 +10,11 @@ body {
 
 ul {
   padding-left: 12px;
-  list-style: none;
-  list-style-type: none;
 }
 
 ul li ul {
   display: none;
   padding-left: 12px;
-  list-style: none;
-  list-style-type: none;
 }
 
 .sidebar ul {
